# logari

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/error/: mod.rs
backend/src/models/: mod.rs  search.rs
backend/src/routes/: game.rs  health.rs  mod.rs
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/auth/: auth-card.tsx  auth-form.tsx  forgot-password-form.tsx  reset-password-form.tsx
frontend/components/ui/: button.tsx  input.tsx  label.tsx
frontend/lib/supabase/: middleware.ts
