[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = "0.1.11"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
